Fixes deno reporting